# rust_sdl3_gpu_gltf_viewer

./: .gitignore  0  Cargo.toml  Helix.lnk  Powershell.lnk  build.rs  open_editor.ps1  rust_sdl3_gltf_renderer_blogpost1.html
models/: Low-Poly-Base_copy.glb  MinimalTriangle.gltf  MorphTargetExample.gltf  axes_test.glb  cube_anim_test2.glb  my_vertex_skin_test.glb  pillar_test.glb  reimported_vertex_skin_test.glb  translate_test.glb
shaders/: fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
src/: main.rs
