[package]
name = "rust_sdl3_gpu_gltf_viewer"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
lto = true

[dependencies]
sdl3 = {version = "0.17.3", features = ["build-from-source"]}
gltf = {version = "1.4.1"}
imgui-sdl3 = {version = "0.5.2"}
